# libalgol

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  algol_config.hpp.cmake  libalgol-config.cmake
CMake/Modules/: FindBSON.cmake  FindPCRECPP.cmake  FindRabbitMQ.cmake  Findlibxml2.cmake
include/algol/: algol.hpp  configurable.hpp  configurator.hpp  dyn_lib.hpp  exception.hpp  file_manager.hpp  identifiable.hpp  log.hpp  log_manager.hpp  loggable.hpp  logger.hpp  md5.hpp  monitor.hpp  platform.hpp  plugin.hpp  plugin_manager.hpp  regex.hpp  timer.hpp  utility.hpp
include/algol/admin/: bot.hpp  connection.hpp  console.hpp  dispatcher.hpp  message.hpp
include/algol/algolSH/: algolSH.hpp  connection.hpp  delegate.hpp
include/algol/analytics/: sheet.hpp  tracker.hpp
include/algol/binreloc/: binreloc.h
include/algol/http/: formats.hpp  header.hpp  reply.hpp  request.hpp
include/algol/log4cpp/: file_log_layout.hpp  syslog_log_layout.hpp  vanilla_log_layout.hpp
include/algol/lua/: engine.hpp
include/algol/messaging/: channel.hpp  communicator.hpp  message.hpp  station.hpp  types.hpp
src/: CMakeLists.txt  algol.cpp  configurable.cpp  configurator.cpp  dyn_lib.cpp  file_manager.cpp  identifiable.cpp  log_manager.cpp  logger.cpp  md5.cpp  monitor.cpp  plugin_manager.cpp  regex.cpp  utility.cpp
src/admin/: bot.cpp  connection.cpp  console.cpp  dispatcher.cpp  message.cpp
src/algolSH/: CMakeLists.txt  algolSH.cpp  connection.cpp  delegate.cpp  main.cpp  utility.cpp
src/analytics/: sheet.cpp  tracker.cpp
src/bindings/lua/SWIG/: CMakeLists.txt  generate_wrappers.py
src/bindings/lua/SWIG/wrappers/: lua_algol_wrap.cxx
src/bindings/python/SWIG/: CMakeLists.txt  generate_wrappers.py  generate_wrappers.sh
src/binreloc/: binreloc.c
src/http/: reply.cpp  request.cpp
src/log4cpp/: file_log_layout.cpp  syslog_log_layout.cpp  vanilla_log_layout.cpp
src/lua/: engine.cpp
src/messaging/: channel.cpp  channel_consumer.cpp  communicator.cpp  message.cpp  station.cpp
test/unit/: CMakeLists.txt  main.cpp.in  test.hpp
test/unit/analytics_test/: analytics_test.cpp  analytics_test.hpp  main.cpp
test/unit/configurator_test/: configurator_test.cpp  configurator_test.hpp  main.cpp
test/unit/console_test/: console_test.cpp  console_test.hpp  main.cpp
test/unit/lua/: test.lua
test/unit/md5_test/: main.cpp  md5_test.cpp  md5_test.hpp
test/unit/messaging_test/: main.cpp  messaging_test.cpp  messaging_test.hpp
test/unit/monitor_test/: main.cpp  monitor_test.cpp  monitor_test.hpp
test/unit/plugins_test/: CMakeLists.txt  main.cpp  my_plugin.cpp  my_plugin.h  my_plugin_dll.cpp  plugins_test.cpp  plugins_test.hpp
test/unit/python/: messaging_test.py
test/unit/template_test/: template_test.cpp  template_test.hpp
