SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
INCLUDE_DIRECTORIES(.)

# ---
# monitoring test
# ---
SET(TEST monitor_test)
SET(TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.hpp ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.cpp )
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/main.cpp.in ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
LIST(APPEND TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
ADD_EXECUTABLE(${TEST} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${TEST} algol)

IF(ALGOL_MESSAGING)
  # ---
  # messaging test
  # ---
  SET(TEST messaging_test)
  SET(TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.hpp ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.cpp )
  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/main.cpp.in ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
  LIST(APPEND TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
  ADD_EXECUTABLE(${TEST} ${TEST_SRCS})
  TARGET_LINK_LIBRARIES(${TEST} algol)

  # ---
  # analytics test
  # ---
  SET(TEST analytics_test)
  SET(TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.hpp ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.cpp )
  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/main.cpp.in ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
  LIST(APPEND TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
  ADD_EXECUTABLE(${TEST} ${TEST_SRCS})
  TARGET_LINK_LIBRARIES(${TEST} algol)
ENDIF()

IF(ALGOL_ADMIN)
  # ---
  # console test
  # ---
  SET(TEST console_test)
  SET(TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.hpp ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.cpp )
  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/main.cpp.in ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
  LIST(APPEND TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
  ADD_EXECUTABLE(${TEST} ${TEST_SRCS})
  TARGET_LINK_LIBRARIES(${TEST} algol)
ENDIF()


# ---
# plugins test
# ---
SET(TEST plugins_test)
SET(TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.hpp ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.cpp )
ADD_SUBDIRECTORY(plugins_test)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/main.cpp.in ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
LIST(APPEND TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
ADD_EXECUTABLE(${TEST} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${TEST} algol)


# ---
# configurator test
# ---
SET(TEST configurator_test)
SET(TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.hpp ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.cpp )
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/main.cpp.in ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
LIST(APPEND TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
ADD_EXECUTABLE(${TEST} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${TEST} algol)

# ---
# MD5 test
# ---
SET(TEST md5_test)
SET(TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.hpp ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/${TEST}.cpp )
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/main.cpp.in ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
LIST(APPEND TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST}/main.cpp)
ADD_EXECUTABLE(${TEST} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${TEST} algol)
